# ipk-exercises

01uebung/: Aufgabe 5 Kommandozeile für Fortgeschrittene.txt  errors  errors.cc  helloworld  helloworld.cc  legalbutwrong  legalbutwrong.cc
02uebung/: Collaps.cc  Collatz Vermutung.txt  FUsiliFolge  collaps  fibonacci  fibonacci.cc  midnight  midnight.cc  votieren.txt
03uebung/: aufgabe02  aufgabe02.cc  aufgabe03  aufgabe03.cc  votieren.txt.txt
04uebung/: aufgabe01  aufgabe01.cc  aufgabe02  convex.txt  punkte.txt  punkte2.txt
05uebung/: CMakeLists.txt  mean_test.cc  median_test.cc  normal.cc  readvector  readvector.cc  sherlock.txt  statistics.cc  statistics.hh  uniform  uniform.cc
05uebung/Aufgabe 2d Laufzeitvergleich/: Laufzeitvergleich.txt
05uebung/Bücher/: mobydick.txt
05uebung/release-build/: CMakeCache.txt  Makefile  cmake_install.cmake  readvector  uniform
06uebung/: aufgabe01.cpp  polygon.hh
06uebung/aufgabe01/: CMakeLists.txt  point.cc  polygon.cc
06uebung/aufgabe02/: CMakeLists.txt  canvas.cpp  canvas.hh  plot.cc  point.hh  testcorners.cpp
07uebung/: CMakeLists.txt  io.cc  point.hh  statistics.hh  statisticsdriver.cc  test_dimensionen.cc
08uebung/: CMakeLists.txt  Was passiert für Wert x und x.txt  canvas.hh  iterationResult.cc  iterationResult.hh  iterationstest  pgm.cc  pgm.hh  point.hh  test.cc
08uebungK/: CMakeLists.txt  iterationResult.cc  test.cc
08uebungkv3/: canvas.hh  test.cc
09uebung/: CMakeLists.txt  Votieren.txt  debug-1  debug-1.cc  debug-2.cc  debug-3  debug-3.cc  test  test.cc
10uebung/: CMakeLists.txt  frequencies.hh  frequencysource.hh  letterTest.cc  letterfrequencies.cc  letterfrequencies.hh  moby-dick.txt  plugins.hh  sanitizeword.cc  sanitizeword.hh  sherlock-holmes.txt  testStatistik.cc  testaufgabeb.cc
11uebung/: CMakeLists.txt  basis.cc  basis.hh  nbody.cc  sdlwrapper.hh
11uebung/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  nbody
Abgabedateien/: Umwandlung-Kommando.txt
Abgabeordner/: aufgabe02.cc  iterationResult.cc  test.cc  votieren.txt.txt
Arbeitsblatt 2/: FusiliFolge.cc
Arbeitsblatt 3/: .gitignore.txt
Arbeitsblatt1/: Aufgabe1.cc  Collaps.cc
Cmake Befehle/: Befehle.txt  CMakeLists.txt
